messages from aircrafts fromatted properly